Remove an annoying rule at rubocop
I don't agree completely with this rule because I **want** to expect
multiple things for a single test case

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,5 +3,8 @@ require: rubocop-rspec
 Style/RescueStandardError:
   Enabled: false
 
+RSpec/MultipleExpectations:
+  Enabled: false
+
 AllCops:
   NewCops: enable
